# chuk-mcp-playbook

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  QUICKSTART.md  README.md  index.md  pyproject.toml
.github/workflows/: test.yml
examples/: 01_basic_query.py  02_ingest_playbook.py  03_async_api_usage.py  04_custom_storage.py  05_mcp_client_simulation.py  06_search_strategies.py  README.md  run_all.sh
playbooks/: check_air_quality_safety.md  check_beach_swimming_safety.md  check_fishing_conditions.md  check_sailing_boating_safety.md  check_uv_sun_safety.md  compare_recurring_date_weather.md  get_sunset_sunrise.md  plan_multiday_trip_weather.md
playbooks/linkedin/: README.md  create_data_driven_post.md  create_engagement_post.md  create_simple_text_post.md  create_storytelling_post.md  create_thought_leadership_post.md  optimize_post_for_engagement.md  troubleshooting_common_issues.md
playbooks/mermaid/: render_api_interaction_flow.md  render_application_state_machine.md  render_approval_workflow.md  render_architecture_diagram.md  render_block_diagram.md  render_budget_allocation.md  render_c4_context_diagram.md  render_checkout_process.md  render_class_diagram.md  render_class_hierarchy.md  render_cloud_infrastructure_diagram.md  render_concept_map.md  render_data_pipeline.md  render_database_schema_visualization.md  render_deployment_pipeline.md  render_er_diagram.md  render_flowchart.md  render_gantt_chart.md  render_git_branching_strategy.md  render_git_graph.md  render_mindmap.md  (+20 more)
tests/: __init__.py  test_basic.py  test_loader.py
(+38 files in other folders)
